[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "whitsmooth_rust"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = ["numpy"]
description = "Batched robust Whittaker smoother (divided differences) implemented in Rust (PyO3)."
readme = "README.md"
license = { text = "MIT" }
