[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "whitsmooth_rust"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["numpy"]
description = "Batched robust Whittaker smoother (divided differences) implemented in Rust (PyO3)."
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/MarcYin/whitsmooth_rust_repo"
Repository = "https://github.com/MarcYin/whitsmooth_rust_repo"
Issues = "https://github.com/MarcYin/whitsmooth_rust_repo/issues"
